# pacer-fork-archive

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  AUDIT.md  CMakeLists.txt  LICENSE  README.md  pacer.example.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
apps/: CMakeLists.txt  timeline.cpp
bindings/: CMakeLists.txt
bindings/imgui/: generate-bindings.py
bindings/pacer/: CMakeLists.txt  generate-bindings.py  nanobind_pacer.cpp
bindings/pacer/pacer/: __init__.pyi
notebooks/: dat-files.ipynb  interpolation.ipynb  noise-investigation.ipynb
pacer/: CMakeLists.txt
pacer/datatypes/: CMakeLists.txt  datatypes.hpp  ops.hpp
pacer/geometry/: CMakeLists.txt  geometry.cpp  geometry.hpp
pacer/gps-source/: CMakeLists.txt  gps-source.cpp  gps-source.hpp
pacer/interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.hpp
pacer/laps/: CMakeLists.txt  laps.cpp  laps.hpp  point-track.hpp
pacer/laps-display/: laps-display.cpp  laps-display.hpp
studio/: PLAN.md  README.md  __init__.py  __main__.py  _analysis_dump.py  _seam_diag.py  _signal.py  _smoke.py  _validate_wallclock.py  app.py  build_reference.py  central_view.py  chapters.py  coaching.py  coaching_panel.py  compare_controller.py  consistency_panel.py  corner_model.py  corners.py  cross_reference.py  demo_sync.py  denoise_check.py  diagnose.py  driving.py  driving_channels.py  export_data.py  export_video.py  gapfill.py  gmeter.py  gmeter_overlay.py  help_dialog.py  ingest.py  lap_table.py  library.py  library_dialog.py  load.py  map_view.py  mk_centerline.json  playback_state.py  player_pane.py  (+11 more)
studio/dev/: __init__.py  _analysis_dump.py  _seam_diag.py  _smoke.py  _validate_wallclock.py  _verify_coaching.py  build_reference.py  demo_sync.py  denoise_check.py  diagnose.py  golden_compare.py  golden_session_dump.py  print_track_entry.py  spike_video_sync.py
studio/dev/research/: __init__.py  analyze_imu.py  decode_upstream_figs.py  diag_corr.py  diag_dop.py  diag_gap_irrelevant.py  dump_imu.c  inventory.c  notebook_vs_gps9.py  proto_smooth.py
studio/docs/: gmeter-validation.md  gps-accuracy-research.md  start-line-verification.md  upstream-20ms-investigation.md
studio/docs/gps_research_scripts/: diag_corr.py  diag_dop.py  diag_gaps.py  proto_smooth.py
tests/: CMakeLists.txt  _synthetic.py  test_chapters.py  test_coaching.py  test_compare.py  test_consistency.py  test_controllers.py  test_coordinate_system.cpp  test_corners.py  test_cross_reference.py  test_delta_engine.py  test_driving.py  test_export_data.py  test_export_video.py  test_gapfill.py  test_geometry.cpp  test_gmeter.py  test_gmeter_overlay.py  test_gps_source.cpp  test_gps_source_bindings.py  test_ingest_equivalence.py  test_interpolation.cpp  test_interpolation_parity.py  test_lap_timing.py  test_laps.cpp  test_laps_bindings.py  test_library.py  test_map_ghost.py  test_ops.cpp  test_rainbow_map.py  test_reference.py  test_scrub_conversion.py  test_session_pure.py  test_session_services.py  test_sidecar.py  test_studio_features.py  test_validate_wallclock.py  test_video_view_compare.py
tools/: build-web.sh
