[project]
authors = [{ name = "Denys Smirnov", email = "dendi239@gmail.com" }]
dependencies = ["litgen @ git+https://github.com/pthom/litgen"]
description = "Add a short description here"
name = "pacer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "litgen"]
build-backend = "scikit_build_core.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
imgui = { path = "bindings/imgui", editable = true }
pacer = { path = "bindings/pacer", editable = true }
# `studio` desktop app (PySide6 + pyqtgraph). See studio/.
pyside6 = ">=6.8"
pyqtgraph = ">=0.13"

[tool.pixi.tasks]
configure = "cmake -S . -B build/Release -G Ninja"
build = { cmd = "cmake --build build/Release", depends-on = ["configure"] }
test = { cmd = "ctest --test-dir build/Release --output-on-failure", depends-on = ["build"] }
test-py = { cmd = "python tests/test_interpolation_parity.py", depends-on = ["build"] }
gen-bindings = "python bindings/pacer/generate-bindings.py"
timeline = { cmd = "./build/Release/apps/timeline.app/Contents/MacOS/timeline", depends-on = ["build"] }
studio = { cmd = "python -m studio", depends-on = ["build"] }
fmt = "git ls-files '*.cpp' '*.hpp' '*.h' '*.c' | xargs clang-format -i"
lint = "ruff check ."
web = "bash tools/build-web.sh"

[tool.pixi.dependencies]
cmake = ">=4.0.2,<5"
jupyter = ">=1.1.1,<2"
ipython = ">=9.2.0,<10"
pandas = ">=2.2.3,<3"
plotly = ">=6.1.0,<7"
scikit-build-core = ">=0.11.4,<0.12"
pytorch = ">=2.7.1,<3"
python = ">=3.13.5,<4"
glfw = ">=3.4,<4"
catch2 = ">=3.15.0,<4"
ninja = ">=1.13.2,<2"
