[project]
authors = [{ name = "Denys Smirnov", email = "dendi239@gmail.com" }]
dependencies = ["litgen @ git+https://github.com/pthom/litgen"]
description = "Add a short description here"
name = "pacer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "litgen"]
build-backend = "scikit_build_core.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pacer = { path = "bindings/pacer", editable = true }
# `studio` desktop app (PySide6 + pyqtgraph). See studio/.
pyside6 = ">=6.8"
pyqtgraph = ">=0.13"
# Phosphor (+ other) icon fonts as QIcons; works with PySide6 via QtPy. See studio/theme.icon.
qtawesome = ">=1.3"

[tool.pixi.tasks]
configure = "cmake -S . -B build/Release -G Ninja"
build = { cmd = "cmake --build build/Release", depends-on = ["configure"] }
test = { cmd = "ctest --test-dir build/Release --output-on-failure", depends-on = ["build"] }
gen-bindings = "python bindings/pacer/generate-bindings.py"
studio = { cmd = "python -m studio", depends-on = ["build"] }
fmt = "git ls-files '*.cpp' '*.hpp' '*.h' '*.c' | xargs clang-format -i"
lint = "ruff check ."

[tool.pixi.dependencies]
cmake = ">=4.0.2,<5"
pandas = ">=2.2.3,<3"
plotly = ">=6.1.0,<7"
scikit-build-core = ">=0.11.4,<0.12"
python = ">=3.13.5,<4"
catch2 = ">=3.15.0,<4"
ninja = ">=1.13.2,<2"
ruff = ">=0.15.16,<0.16"
